5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1758_1189.log
== SUBMITION (2019-05-30 01:25:31) 
-- CODE:
from numpy import * 

v = input("Insira um string: ")

msg = v.replace(" ","")
print(msg.upper())

x = len(v.replace(" ",""))

i = 0
k = 0
a = -1
msg2 = ""

v2 = zeros(x, dtype = str)

while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == (v,replace(" ",""))):
	h = 1
else:
	h = 0
print(h)
-- EXECUTION TIME:
0.525488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 24, in <module>
    if(msg2 == (v,replace(" ",""))):
NameError: name 'replace' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:26:06) 
-- CODE:
from numpy import * 

v = input("Insira um string: ")

msg = v.replace(" ","")
print(msg.upper())

x = len(v.replace(" ",""))

i = 0
k = 0
a = -1
msg2 = ""

v2 = zeros(x, dtype = str)

while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == (v.replace(" ",""))):
	h = 1
else:
	h = 0
print(h)
-- EXECUTION TIME:
0.472552
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
